--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.test.myapplication">
-    <!-- permissions to read contacts -->
     <uses-permission android:name="android.permission.CALL_PHONE" /> <!-- permissions to send sms -->
     <uses-permission android:name="android.permission.SEND_SMS" /> <!-- permissions to write sms -->
-    <uses-permission android:name="android.permission.WRITE_SMS" />
 
     <application
         android:allowBackup="true"
@@ -13,6 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Contacts">
+        <activity
+            android:name=".view.activity.CreateNewContactActivity"
+            android:exported="false" />
         <activity
             android:name=".view.activity.DetailActivity"
             android:exported="false" />
