--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,5 +50,6 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation 'it.xabaras.android:recyclerview-swipedecorator:1.2.3'
     implementation 'com.googlecode.ez-vcard:ez-vcard:0.11.3'
+    implementation 'com.github.searchy2:CustomAlertViewDialogue:2.6.1'
 
 }
